# analysis

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  analyze.py  config.py  db-setup.py  docker-compose.yml  export.py  graphs.py  prestart.sh  pyproject.toml  pytest.ini  run.py  scrape.py  scrapy.cfg  seed_database.py  setup.py  upload.py
alembic/: env.py
analyses/: logo.py  summary.py
api/: main.py
assets/: seed-urls.csv
data/: keywords_en.csv  seed.csv
database/: CreateQueryBuilder.py  Database.py  Field.py  QueryBuilder.py  Table.py  __init__.py  add_analysis_columns.py  add_matches.py  config.py  find_url.py  get_next_url_to_analyze.py
files/: names.csv
helpers/: __init__.py  batches.py  extract_links_from_html.py  extract_text_from.py  extract_texts_from_html.py  find_sdg_keywords_in_text.py  get_context.py  get_database_session.py  get_domain_from_url.py  get_domains_table_from_analysis_database.py  get_html_asset_path.py  get_normalized_url.py  get_registered_domain.py  get_scraped_database.py  get_sdg_regex_patterns.py  get_top_level_domain_from_url.py  get_urls_table_from_scraped_database.py  in_batches.py  is_binary_string.py  matches_dict.py  read_gzipped_asset.py  save_result.py  sdg_colors.py  should_ignore_url.py  spider_runner.py  spider_runner_process.py  squish.py  suppress_stdout_and_stderr.py  update_analysis_database.py  write_gzipped_asset.py
inputs/: names.csv
models/: BaseModel.py  BaseView.py  Cache.py  CloudinaryApi.py  Connection.py  GoogleMapsAPI.py  Keyword.py  Link.py  Organization.py  Social.py  Webpage.py  (+7 more)
(+279 files in other folders)
