[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Finn Woelm"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
sqlalchemy-mixins = "^1.5"
SQLAlchemy-Utils = "^0.37.9"
furl = "^2.1.3"
fastapi = {extras = ["all"], version = "^0.70.1"}
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
pytest-only = "^1.2.2"
pytest-icdiff = "^0.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
