[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Finn Woelm"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.28"
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
sqlalchemy-mixins = "^1.5"
SQLAlchemy-Utils = "^0.37.9"
furl = "^2.1.3"
fastapi = {extras = ["all"], version = "^0.70.1"}
Scrapy = "^2.5.1"
tldextract = "^3.1.2"
python-magic = "^0.4.24"
beautifulsoup4 = "^4.10.0"
fasttext = "^0.9.2"
spacy = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
pytest-only = "^1.2.2"
pytest-icdiff = "^0.5"
pytest-mock = "^3.6.1"
pytest-describe = "^2.0.1"
pytest-recording = "^0.12.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
